[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/TurnOrderObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/TurnOrder.gd" type="Script" id=3]

[node name="TurnOrder" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -5.0
margin_top = -54.0
margin_right = 311.0
margin_bottom = 45.0
expand = true

[node name="Objects" type="Node2D" parent="."]
scale = Vector2( 2, 2 )

[node name="TurnOrderObject" parent="Objects" instance=ExtResource( 1 )]

[node name="TurnOrderObject2" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 17, 0 )

[node name="TurnOrderObject3" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 34, 0 )

[node name="TurnOrderObject4" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 51, 0 )

[node name="TurnOrderObject5" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 68, 0 )

[node name="TurnOrderObject6" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 85, 0 )

[node name="TurnOrderObject7" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 102, 0 )

[node name="TurnOrderObject8" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 119, 0 )

[node name="TurnOrderObject9" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 136, 0 )

[node name="Label" type="Label" parent="."]
margin_left = 4.0
margin_top = -18.0
margin_right = 302.0
margin_bottom = -3.0
theme = ExtResource( 2 )
text = "Turn Order"
align = 1
valign = 1

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
